Bug 1161215 - Don't fire spurious resize events to content when the size didn't actually change. r=smaug